<resources>
    <string name="app_name">Exercise</string>
    <string-array name="exercise_names"></string-array>

    <!-- MainActivity -->


    <!--  -->
    <string name="goBack">Tillbaka</string>
    <string name="manageWorkoutAndExercises">Hantera Pass och Övningar</string>
    <string name="exercises">Övningar</string>
    <string name="workouts">Pass</string>
    <string name="finished">Klart</string>


    <!-- ManageWorkOutAndExercies -->
    <string name="editExercises">Redigera Övningar</string>
    <string name="editWorkouts">Redigera Pass</string>
    <string name="addExercise">Lägg till ny Övning</string>
    <string name="addWorkout">Lägg till nytt Pass</string>


    <!--Add Exercies -->
    <string name="nameExercies">Namn</string>
    <string name="addDescriptionToTheExercies">Beskrivning</string>


</resources>
