<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_workouts_and_exercises"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jegge.exercise.ManageWorkoutsAndExercises">

    <Button
        android:text="@string/addExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/button4"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/btnAddWorkout"
        android:layout_alignStart="@+id/btnAddWorkout" />

    <Button
        android:text="@string/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/goBackButton" />

    <Button
        android:text="@string/editExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <TextView
        android:text="@string/workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/workoutTitle"
        android:textSize="20dp"
        android:layout_above="@+id/btnAddWorkout"
        android:layout_alignLeft="@+id/btnAddWorkout"
        android:layout_alignStart="@+id/btnAddWorkout" />

    <TextView
        android:text="@string/exercises"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/exercisetitle"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:text="@string/editWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditWorkout"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/goBackButton"
        android:layout_alignLeft="@+id/btnAddWorkout"
        android:layout_alignStart="@+id/btnAddWorkout" />

    <Button
        android:text="@string/addWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:id="@+id/btnAddWorkout"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_alignBottom="@+id/btnEditWorkout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Kategori"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/btnEditWorkout"
        android:layout_alignEnd="@+id/btnEditWorkout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lägg till ny kategori"
        android:id="@+id/btnAddCategory"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Redigera kategorier"
        android:id="@+id/btnEditCategories"
        android:layout_below="@+id/btnAddCategory"
        android:layout_alignLeft="@+id/btnAddCategory"
        android:layout_alignStart="@+id/btnAddCategory" />

</RelativeLayout>
