<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jegge.exercise.AddExercise">

    <TextView
        android:text="@string/nameExercies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/nameOfTheExerciesEditText" />

    <Button
        android:text="@string/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/goBackButton" />

    <TextView
        android:text="@string/addDescriptionToTheExercies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameOfTheExerciesEditText"
        android:layout_alignLeft="@+id/nameOfTheExerciesEditText"
        android:layout_alignStart="@+id/nameOfTheExerciesEditText"
        android:layout_marginTop="17dp"
        android:id="@+id/descriptiontitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/descriptiontitle"
        android:layout_alignRight="@+id/nameOfTheExerciesEditText"
        android:layout_alignEnd="@+id/nameOfTheExerciesEditText"
        android:id="@+id/editTextDescriptionOfTheExercies" />

    <Button
        android:text="@string/finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exerciesCreatedButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
